style(controller): improve the code style (#64)